--- a/Nhom4_Kempinki/package.json
+++ b/Nhom4_Kempinki/package.json
@@ -56,6 +56,7 @@
     "bunnyjs": "^0.14.41",
     "eve": "^0.5.4",
     "fitvids": "^2.0.0",
+    "font-awesome": "^4.7.0",
     "gsap": "^1.20.4",
     "jquery": "^3.3.1",
     "jquery-touchswipe": "^1.6.19",
