--- a/Nhom4_Kempinki/package.json
+++ b/Nhom4_Kempinki/package.json
@@ -63,12 +63,14 @@
     "micromodal": "^0.3.2",
     "normalize.css": "^8.0.0",
     "overlayscrollbars": "^1.6.0",
+    "owl.carousel": "^2.3.4",
     "raphael": "^2.2.7",
     "scrollmagic": "^2.0.5",
     "slick-carousel": "^1.8.1",
     "sticky-js": "^1.2.0",
     "tippy.js": "^3.2.0",
     "vanilla-lazyload": "^10.0.1",
+    "wowjs": "^1.1.3",
     "yarn": "^1.10.1"
   }
 }
