--- a/Nhom4_Kempinki/package.json
+++ b/Nhom4_Kempinki/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "bunnyjs": "^0.14.41",
+    "choices.js": "^7.0.0",
     "eve": "^0.5.4",
     "fitvids": "^2.0.0",
     "font-awesome": "^4.7.0",
@@ -61,6 +62,7 @@
     "jquery": "^3.3.1",
     "jquery-touchswipe": "^1.6.19",
     "magnific-popup": "^1.1.0",
+    "mapbox-gl": "^0.53.1",
     "micromodal": "^0.3.2",
     "normalize.css": "^8.0.0",
     "overlayscrollbars": "^1.6.0",
