--- a/Nhom4_Kempinki/package.json
+++ b/Nhom4_Kempinki/package.json
@@ -61,14 +61,18 @@
     "gsap": "^1.20.4",
     "jquery": "^3.3.1",
     "jquery-touchswipe": "^1.6.19",
+    "lodash": "^4.17.11",
     "magnific-popup": "^1.1.0",
     "mapbox-gl": "^0.53.1",
     "micromodal": "^0.3.2",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.0",
     "overlayscrollbars": "^1.6.0",
     "owl.carousel": "^2.3.4",
+    "pikaday": "^1.8.0",
     "raphael": "^2.2.7",
     "scrollmagic": "^2.0.5",
+    "select2": "^4.0.6-rc.1",
     "slick-carousel": "^1.8.1",
     "sticky-js": "^1.2.0",
     "tippy.js": "^3.2.0",
