--- a/adaptis-master/package.json
+++ b/adaptis-master/package.json
@@ -66,6 +66,7 @@
     "raphael": "^2.2.7",
     "scrollmagic": "^2.0.5",
     "slick-carousel": "^1.8.1",
+    "slick" : "^1.12.2",
     "sticky-js": "^1.2.0",
     "tippy.js": "^3.2.0",
     "vanilla-lazyload": "^10.0.1",
