--- a/renovation/package.json
+++ b/renovation/package.json
@@ -67,7 +67,9 @@
         "normalize.css": "^8.0.0",
         "overlayscrollbars": "^1.6.0",
         "raphael": "^2.2.7",
+        "revolution": "^1.0.0",
         "scrollmagic": "^2.0.5",
+        "slick": "^1.12.2",
         "slick-carousel": "^1.8.1",
         "sticky-js": "^1.2.0",
         "tippy.js": "^3.2.0",
