--- a/Nhom4_Kempinki/package.json
+++ b/Nhom4_Kempinki/package.json
@@ -56,8 +56,11 @@
     "bunnyjs": "^0.14.41",
     "eve": "^0.5.4",
     "fitvids": "^2.0.0",
+    "font-awesome": "^4.7.0",
     "gsap": "^1.20.4",
+    "isotope-layout": "^3.0.6",
     "jquery": "^3.3.1",
+    "jquery-bridget": "^2.0.1",
     "jquery-touchswipe": "^1.6.19",
     "magnific-popup": "^1.1.0",
     "micromodal": "^0.3.2",
