--- a/Nhom4_Kempinki/package.json
+++ b/Nhom4_Kempinki/package.json
@@ -63,6 +63,7 @@
     "jquery-bridget": "^2.0.1",
     "jquery-touchswipe": "^1.6.19",
     "magnific-popup": "^1.1.0",
+    "masonry-layout": "^4.2.2",
     "micromodal": "^0.3.2",
     "normalize.css": "^8.0.0",
     "overlayscrollbars": "^1.6.0",
