--- a/adaptis-master/package.json
+++ b/adaptis-master/package.json
@@ -58,7 +58,6 @@
     "fitvids": "^2.0.0",
     "gsap": "^1.20.4",
     "jquery": "^3.3.1",
-    "jquery-datetimepicker": "^2.5.21",
     "jquery-touchswipe": "^1.6.19",
     "magnific-popup": "^1.1.0",
     "micromodal": "^0.3.2",
@@ -67,10 +66,11 @@
     "raphael": "^2.2.7",
     "scrollmagic": "^2.0.5",
     "slick-carousel": "^1.8.1",
-    "slick" : "^1.12.2",
     "sticky-js": "^1.2.0",
     "tippy.js": "^3.2.0",
+    "wowjs": "^1.1.3",
     "vanilla-lazyload": "^10.0.1",
-    "yarn": "^1.15.2"
+    "yarn": "^1.10.1",
+    "jquery-datetimepicker": "^2.5.21"
   }
 }
